--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -2,7 +2,7 @@ substitutions:
   name: "shys-tx-ultimate"
   friendly_name: "TX Ultimate"
 
-  relay_count: "4"
+  button_count: "4"
 
   toggle_relay_1_on_touch: "true"
   toggle_relay_2_on_touch: "true"
@@ -40,6 +40,9 @@ substitutions:
   swipe_right_brightness: "1"
   swipe_right_color: "{100,0,70}"
   swipe_right_effect: ""
+
+  swipe_between_led_delay: 50ms
+  dim_between_led_delay: 50ms
 
   relay_1_pin: GPIO18
   relay_2_pin: GPIO17
@@ -492,13 +495,13 @@ tx_ultimate_touch:
   on_press:
     - lambda: |-
         ESP_LOGW("tx_ultimate_touch.on_press", "Touch Position: %d / State: %d", touch.x, touch.state);
-        auto led_and_button = get_led_and_button_at_x(touch.x, ${relay_count});
+        auto led_and_button = get_led_and_button_at_x(touch.x, ${button_count});
         id(led_on_button_press)->execute(led_and_button[0], led_and_button[1]);
     - switch.turn_on: vibra
 
   on_release:
     - lambda: |-
-        auto led_and_button = get_led_and_button_at_x(touch.x, ${relay_count});
+        auto led_and_button = get_led_and_button_at_x(touch.x, ${button_count});
         int led_index = led_and_button[0];
         int button = led_and_button[1];
         auto button_press_duration = millis() - id(button_press_start_time)[button-1];
@@ -647,7 +650,7 @@ script:
                 //ESP_LOGD("button", "Dimming button 1 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
                 target_led->get(led_index).set(esphome::Color(r, g, b));
                 target_led->schedule_show();
-            - delay: 50ms
+            - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[0] = 0;'
 
   - id: led_dim_button_2
@@ -669,7 +672,7 @@ script:
                 //ESP_LOGD("button", "Dimming button 2 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
                 target_led->get(led_index).set(esphome::Color(r, g, b));
                 target_led->schedule_show();
-            - delay: 50ms
+            - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[1] = 0;'
 
   - id: led_dim_button_3
@@ -691,7 +694,7 @@ script:
                 //ESP_LOGD("button", "Dimming button 3 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
                 target_led->get(led_index).set(esphome::Color(r, g, b));
                 target_led->schedule_show();
-            - delay: 50ms
+            - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[2] = 0;'
 
   - id: led_dim_button_4
@@ -713,7 +716,7 @@ script:
                 //ESP_LOGD("button", "Dimming button 4 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
                 target_led->get(led_index).set(esphome::Color(r, g, b));
                 target_led->schedule_show();
-            - delay: 50ms
+            - delay: ${dim_between_led_delay}
       - lambda: 'id(button_press_start_time)[3] = 0;'
 
   - id: refresh_nightlight
@@ -743,8 +746,7 @@ script:
           green: !lambda "return id(nightlight_color)[1]/100.0;"
           blue:  !lambda "return id(nightlight_color)[2]/100.0;"
 
-# TODO dim the right LEDs based on the relay_count
-# make another util function to return the LED for a given button
+# TODO dim the right LEDs based on the button_count
   - id: led_on_swipe_left
     mode: restart
     then:
@@ -757,34 +759,34 @@ script:
           id: led_on_button_press
           button: 4
           led_index: 6
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_on_button_press
           button: 3
           led_index: 8
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_on_button_press
           button: 2
           led_index: 10
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_on_button_press
           button: 1
           led_index: 12
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_4
           led_index: 6
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_3
           led_index: 8
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_2
           led_index: 10
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_1
           led_index: 12
@@ -801,34 +803,34 @@ script:
           id: led_on_button_press
           button: 1
           led_index: 12
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_on_button_press
           button: 2
           led_index: 10
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_on_button_press
           button: 3
           led_index: 8
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_on_button_press
           button: 4
           led_index: 6
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_1
           led_index: 12
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_2
           led_index: 10
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_3
           led_index: 8
-      - delay: 50ms
+      - delay: ${swipe_between_led_delay}
       - script.execute:
           id: led_dim_button_4
           led_index: 6
