--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -500,7 +500,7 @@ tx_ultimate_touch:
     - switch.turn_on: vibra
 
   on_release:
-    - lambda: 'ESP_LOGI("button", "on_release stopping on_button_press");'
+#   - lambda: 'ESP_LOGI("button", "on_release stopping on_button_press");'
     - script.stop: led_on_button_press
     - lambda: |-
         auto led_and_button = get_led_and_button_at_x(touch.x, ${button_count});
@@ -508,7 +508,9 @@ tx_ultimate_touch:
         int button = led_and_button[1];
         auto button_press_duration = millis() - id(button_press_start_time)[button-1];
         //ESP_LOGD("button", "Button %d held for %u ms", button, button_press_duration);
+        bool is_long_press = false;
         if (button_press_duration >= ${long_press_time}) {
+          is_long_press = true;
           ESP_LOGD("button", "Button %d long pressed", button);
           switch(button) {
             case 1: id(long_press_1).publish_state(true); break;
@@ -519,7 +521,7 @@ tx_ultimate_touch:
           id(vibra).turn_on();
         }
         switch(button) {
-          case 1: id(dim_led_at_button_1)->execute(led_index); break;
+          case 1: id(dim_led_at_button_1)->execute(led_index, is_long_press); break;
           case 2: id(dim_led_at_button_2)->execute(led_index); break;
           case 3: id(dim_led_at_button_3)->execute(led_index); break;
           case 4: id(dim_led_at_button_4)->execute(led_index); break;
@@ -588,7 +590,6 @@ script:
     then:
       - lambda: |-
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-
           if (id(button_press_start_time)[button-1] == 0) {
             // this button has been pressed twice in a row, don't alter original_color
             auto original_color = target_led->get(led_index).get();
@@ -598,7 +599,6 @@ script:
             ESP_LOGI("button", "button %d press at LED %d, button pressed before fade completed", button, led_index);
           }
           id(button_press_start_time)[button-1] = millis();
-
           target_led->get(led_index).set(esphome::Color(id(touch_color)[0], id(touch_color)[1], id(touch_color)[2]));
           target_led->schedule_show();
 # This script is stopped by on_release, so only if the button is held long enough 
@@ -620,6 +620,7 @@ script:
     mode: restart
     parameters:
       led_index: int
+      is_long_press: bool
     then:
       - delay: 1s
       - repeat:
@@ -627,10 +628,11 @@ script:
           then:
             - lambda: |-
                 auto original_color = id(original_led_color)[0];
+                auto dim_color = (is_long_press) ? id(long_press_color) : id(touch_color);
                 float factor = iteration * 0.1f;
-                int r = id(touch_color)[0]*(1.0-factor) + original_color.r*factor;
-                int g = id(touch_color)[1]*(1.0-factor) + original_color.g*factor;
-                int b = id(touch_color)[2]*(1.0-factor) + original_color.b*factor;
+                int r = id(dim_color)[0]*(1.0-factor) + original_color.r*factor;
+                int g = id(dim_color)[1]*(1.0-factor) + original_color.g*factor;
+                int b = id(dim_color)[2]*(1.0-factor) + original_color.b*factor;
                 esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
                 //ESP_LOGD("button", "Dimming button 1 iteration %d (LED %d) to %d, %d, %d", iteration, led_index, r, g, b);
                 target_led->get(led_index).set(esphome::Color(r, g, b));
@@ -775,6 +777,7 @@ script:
       - script.execute:
           id: dim_led_at_button_1
           led_index: 12
+          is_long_press: false
 
   - id: led_on_swipe_right
     mode: restart
@@ -807,6 +810,7 @@ script:
       - script.execute:
           id: dim_led_at_button_1
           led_index: 12
+          is_long_press: false
       - delay: ${swipe_between_led_delay}
       - script.execute:
           id: dim_led_at_button_2
